# TheBestSailor

./: .gitignore  AUTHORS  README.md  exigences
src/: CMakeLists.txt  CPackConfig.cmake
src/include/tbs/client/: BackgroundView.h  ChoiceIpView.h  Client.h  ClientPlayer.h  ClientWorld.h  ConnectionView.h  DetailsView.h  DisplayInfo.h  EntityView.h  GlobalView.h  Gradient.h  TextView.h  TileMap.h  ValueNoise.h  VectorView.h  World.h
src/include/tbs/client/checkpoint/: ClientCheckPoint.h  ClientCheckPointManager.h
src/include/tbs/client/game/: ClientGame.h  ClientGameConnection.h  ClientGameSpeedestWin.h
src/include/tbs/client/gamestate/: EGamestate.h  GameState.h  GameStateGame.h  GameStateMainMenu.h  GameStateManager.h  GameStateWaitGame.h
src/include/tbs/client/map/: Gradient.h  HeigthMapView.h  TileMap.h  WindMapView.h
src/include/tbs/client/network/: ClientMsgQueue.h  ClientNetwork.h  ClientTCPManager.h  ClientUDPManager.h  Input.h  InputPredictions.h
src/include/tbs/client/ship/: DrawShip.h  ShipView.h
src/include/tbs/client/state/: ClientState.h  EClientState.h  State.h  StateGame.h  StateMainMenu.h  StateManager.h  StateWaitGame.h
src/include/tbs/client/view/: ChoiceIpView.h  ConnectionView.h  DetailsView.h  GlobalView.h  ShipView.h  TextView.h
src/include/tbs/server/: Game.h  PathFinding.h  PlayerList.h  Server.h  ServerPlayer.h  ServerPlayers.h  ServerSocketManager.h  ServerWorld.h
src/include/tbs/server/game/: Game.h  GameSpeedestWin.h  ServerGame.h  ServerGameSpeedestWin.h
src/include/tbs/server/network/: ConnectionEvent.h  PacketFactory.h  ServerMessageQueue.h  ServerNetwork.h  ServerNetworkSpeedestWin.h  ServerTCPManager.h  ServerUDPManager.h
src/include/tbs/server/player/: PlayerManager.h
src/include/tbs/server/serverCheckpoint/: ServerCheckpoint.h  ServerCheckpointManager.h
src/include/tbs/shared/: ConnectionManager.h  Font.h  Force.h  Kinematics.h  Map.h  MapHeader.h  Rand.h  Random.h  Sharable.h  SynchronizedQueue.h  TileMap.h  UdpSocketManager.h  Utils.h
src/include/tbs/shared/checkpoint/: Checkpoint.h  CheckpointManager.h
src/include/tbs/shared/entity/: Entity.h  World.h
src/include/tbs/shared/game/: GameType.h  Player.h
src/include/tbs/shared/map/: DrawWind.h  HeigthMap.h  Map.h  MapHeader.h  Wind.h  WindMap.h
src/include/tbs/shared/network/: EmplifiedSocket.h  Message.h  MessageData.h  MsgAction.h  MsgClientPlayerInfo.h  MsgData.h  MsgDisconnect.h  MsgFactory.h  MsgGame.h  MsgServerPlayerInfo.h  MsgTurnHelm.h  MsgTurnSail.h  MsgType.h  Request.h  RequestData.h  RequestDisconnect.h  RequestTurnHelm.h  RequestTurnSail.h  Requests.h  Semaphore.h  SocketQueuBuffer.h  SocketReader.h  UtilsNetwork.h
src/include/tbs/shared/ship/: Helm.h  Sail.h  Ship.h
src/lib/tbs/: CMakeLists.txt
src/lib/tbs/client/: BackgroundView.cpp  ChoiceIpView.cpp  Client.cpp  ClientPlayer.cpp  ClientWorld.cpp  ConnectionView.cpp  DetailsView.cpp  DisplayInfo.cpp  GlobalView.cpp  Gradient.cpp  PathFinding.cpp  TextView.cpp  TileMap.cpp  ValueNoise.cpp  VectorView.cpp  World.cpp
src/lib/tbs/client/checkpoint/: ClientCheckPoint.cpp  ClientCheckPointManager.cpp
src/lib/tbs/client/game/: ClientGame.cpp  ClientGameConnection.cpp  ClientGameSpeedestWin.cpp
src/lib/tbs/client/gamestate/: GameState.cpp  GameStateGame.cpp  GameStateMainMenu.cpp  GameStateManager.cpp  GameStateWaitGame.cpp
src/lib/tbs/client/map/: Gradient.cpp  TileMap.cpp  (+2 more)
src/lib/tbs/server/: PathFinding.cpp  PlayerList.cpp  Server.cpp  ServerPlayer.cpp  ServerPlayers.cpp  ServerSocketManager.cpp  ServerWorld.cpp
src/lib/tbs/shared/: ConnectionManager.cpp  Font.cpp  Force.cpp  Kinematics.cpp  Map.cpp  MapHeader.cpp  Player.cpp  Random.cpp  Sharable.cpp  TileMap.cpp  UdpSocketManager.cpp  ValueNoise.cpp
src/nbproject/: configurations.xml  project.xml
src/nbproject/private/: Default.properties  configurations.xml  private.xml
src/share/tbs/: FILES
(+121 files in other folders)
